[tool.briefcase]
project_name = "Stream Saver"
bundle = "dev.joswick"
version = "0.0.1"
url = "https://joswick.dev/stream_saver"
license = "MIT license"
author = 'Zachary Joswick'
author_email = "zjoswick@gmail.com"

[tool.briefcase.app.stream_saver]
formal_name = "Stream Saver"
description = "A tool to automatically download streams live and avoid muted VODs"
icon = "src/stream_saver/resources/stream_saver"
sources = ['src/stream_saver', 'src/binaries']
requires = ["typer == 0.3.1", "streamlink == 1.5.0"]


[tool.briefcase.app.stream_saver.macOS]
requires = []

[tool.briefcase.app.stream_saver.linux]
requires = []
system_requires = []

[tool.briefcase.app.stream_saver.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.stream_saver.iOS]
requires = []

[tool.briefcase.app.stream_saver.android]
requires = []

[tool.poetry]
name = "stream_saver"
version = "0.0.1"
description = "A tool to automatically download streams live and avoid muted VODs"
authors = ["Zachary Joswick <joswick@torc.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.1"
streamlink = "^1.5.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.0.1"
briefcase = "^0.3.3 "
coverage = "^5.2.1"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


